Добавил оптимизированные изображения

--- a/index.html
+++ b/index.html
@@ -62,31 +62,31 @@
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="" alt="" /></li>
-                <li><img src="" alt="" /></li>
-                <li><img src="" alt="" /></li>
+                <li><img src="./images/what_are_we_doing/box_1.jpg" alt="Написание кода" /></li>
+                <li><img src="./images/what_are_we_doing/box_2.jpg" alt="Мобильные приложения" /></li>
+                <li><img src="./images/what_are_we_doing/box_3.jpg" alt="Дизайн" /></li>
             </ul>
         </section>
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="" alt="" />
+                    <img src="./images/our_team/product_designer.jpg" alt="Игорь Демьяненко" />
                     <h3>Игорь Демьяненко</h3>
                     <p>Product Designer</p>
                 </li>
                 <li>
-                    <img src="" alt="" />
+                    <img src="./images/our_team/frontend_developer.jpg" alt="Ольга Репина" />
                     <h3>Ольга Репина</h3>
                     <p>Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="" alt="" />
+                    <img src="./images/our_team/marketing.jpg" alt="Николай Тарасов" />
                     <h3>Николай Тарасов</h3>
                     <p>Marketing</p>
                 </li>
                 <li>
-                    <img src="" alt="" />
+                    <img src="./images/our_team/ui_designer.jpg" alt="Михаил Ермаков" />
                     <h3>Михаил Ермаков</h3>
                     <p>UI Designer</p>
                 </li>
