--- a/index.html
+++ b/index.html
@@ -1,31 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 
 <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>WebStudio</title>
 </head>
 
 <body>
+    <!--Шапка сайта-->
     <header>
-        <a href="">WebStudio</a>
+        <nav>
+            <a href="/">WebStudio</a>
+            <ul>
+                <li><a href="/">Студия</a></li>
+                <li><a href="">Портфолио</a></li>
+                <li><a href="">Контакты</a></li>
+            </ul>
+        </nav>
         <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
-        </ul>
-        <ul>
-            <li><a href="">info@devstudio.com</a></li>
-            <li><a href="+38 096 111 11 11">+38 096 111 11 11</a></li>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
+        <!--Герой-->
         <section>
             <h1>Эффективные решения для вашего бизнеса</h1>
             <button type="button">Заказать услугу</button>
         </section>
+        <!--О нас-->
         <section>
             <h2></h2>
             <ul>
@@ -59,47 +64,59 @@
                 </li>
             </ul>
         </section>
+        <!--Чем мы занимаемся-->
         <section>
             <h2>Чем мы занимаемся</h2>
             <ul>
-                <li><img src="./images/what_are_we_doing/box_1.jpg" alt="Написание кода" /></li>
-                <li><img src="./images/what_are_we_doing/box_2.jpg" alt="Мобильные приложения" /></li>
-                <li><img src="./images/what_are_we_doing/box_3.jpg" alt="Дизайн" /></li>
+                <li>
+                    <img src="./images/what_are_we_doing/box_1.jpg" alt="Написание кода" width="370" />
+                </li>
+                <li>
+                    <img src="./images/what_are_we_doing/box_2.jpg" alt="Мобильные приложения" width="370" />
+                </li>
+                <li>
+                    <img src="./images/what_are_we_doing/box_3.jpg" alt="Дизайн" width="370" />
+                </li>
             </ul>
         </section>
+        <!--Наша команда-->
         <section>
             <h2>Наша команда</h2>
             <ul>
                 <li>
-                    <img src="./images/our_team/product_designer.jpg" alt="Игорь Демьяненко" />
+                    <img src="./images/our_team/product_designer.jpg" alt="Игорь Демьяненко" width="270" />
                     <h3>Игорь Демьяненко</h3>
-                    <p>Product Designer</p>
+                    <p lang="en">Product Designer</p>
                 </li>
                 <li>
-                    <img src="./images/our_team/frontend_developer.jpg" alt="Ольга Репина" />
+                    <img src="./images/our_team/frontend_developer.jpg" alt="Ольга Репина" width="270" />
                     <h3>Ольга Репина</h3>
-                    <p>Frontend Developer</p>
+                    <p lang="en">Frontend Developer</p>
                 </li>
                 <li>
-                    <img src="./images/our_team/marketing.jpg" alt="Николай Тарасов" />
+                    <img src="./images/our_team/marketing.jpg" alt="Николай Тарасов" width="270" />
                     <h3>Николай Тарасов</h3>
-                    <p>Marketing</p>
+                    <p lang="en">Marketing</p>
                 </li>
                 <li>
-                    <img src="./images/our_team/ui_designer.jpg" alt="Михаил Ермаков" />
+                    <img src="./images/our_team/ui_designer.jpg" alt="Михаил Ермаков" width="270" />
                     <h3>Михаил Ермаков</h3>
-                    <p>UI Designer</p>
+                    <p lang="en">UI Designer</p>
                 </li>
             </ul>
         </section>
     </main>
+    <!-- Футер -->
     <footer>
-        <a href="">WebStudio</a>
+        <a href="/">WebStudio</a>
         <address>
             <ul>
-                <li><a href="">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href=""></a>info@example.com</li>
-                <li><a href=""></a>+38 099 111 11 11</li>
+                <li>
+                    <a href="https://goo.gl/maps/jtnfKbwxNLxgWtV19" target="_blank" rel="noopener noreferrer">г. Киев,
+                        пр-т Леси Украинки, 26</a>
+                </li>
+                <li><a href="mailto:info@example.com">info@example.com</a></li>
+                <li><a href="tel:+380991111111">+38 099 111 11 11</a></li>
             </ul>
         </address>
     </footer>
